--- a/GameBreakersDBManagement/App.config
+++ b/GameBreakersDBManagement/App.config
@@ -6,7 +6,7 @@
 
   <connectionStrings>
     <add name="GameBreakers"
-            connectionString="Data Source=VIVARIUMTAB\SQLEXPRESS;Initial Catalog=GameBreakers;Integrated Security=True"
+            connectionString="Data Source=JOELSPC\SQLEXPRESSJOEL;Initial Catalog=GameBreakers;Integrated Security=True"
             providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
