--- a/GameBreakersDBManagement/GameBreakersDBManagement.csproj
+++ b/GameBreakersDBManagement/GameBreakersDBManagement.csproj
@@ -64,6 +64,12 @@
     <Compile Include="BackgroundDataManager.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Cart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cart.Designer.cs">
+      <DependentUpon>Cart.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="InventoryForms\CC\CCScraper.cs">
       <SubType>Form</SubType>
@@ -98,6 +104,9 @@
     <Compile Include="Startup.Designer.cs">
       <DependentUpon>Startup.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Cart.resx">
+      <DependentUpon>Cart.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InventoryForms\CC\CCScraper.resx">
       <DependentUpon>CCScraper.cs</DependentUpon>
     </EmbeddedResource>
