--- a/GameBreakersDBManagement/App.config
+++ b/GameBreakersDBManagement/App.config
@@ -1,16 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GameBreakersDBManagement.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
 
+  
   <connectionStrings>
     <add name="GameBreakers"
             connectionString="Data Source=JOELSPC\SQLEXPRESSJOEL;Initial Catalog=GameBreakers;Integrated Security=True"
             providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
-    <add key="daysBetweenPriceCheck" value="7"/>
-    <add key="pcUserName" value="Joel"/>
-  </appSettings>
+  
+  <userSettings>
+    <GameBreakersDBManagement.Properties.Settings>
+      <setting name="DaysBetweenPriceCheck" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Currency" serializeAs="String">
+        <value>USD</value>
+      </setting>
+      <setting name="ExchangeRate" serializeAs="String">
+        <value>1.25778</value>
+      </setting>
+    </GameBreakersDBManagement.Properties.Settings>
+  </userSettings>
 </configuration>
